# calendar-link

./: Cargo.toml  README.md  justfile
src/: err.rs  lib.rs  prelude.rs  stringify.rs  time.rs  typ.rs  url.rs
src/drivers/: google.rs
src/providers/: __snapshot__.rs  aol.rs  google.rs  ical.rs  ics.rs  mod.rs  msteams.rs  outlook.rs  url.rs  yahoo.rs
